Added Submit + Reset in Dos and Donts game

--- a/src/app/malaria-101/activity-2/activity-2.component.html
+++ b/src/app/malaria-101/activity-2/activity-2.component.html
@@ -3,7 +3,7 @@
     <h2 class="sub-heading-1 text-center"> {{language?.heading}} </h2>
   </div>
 </div>
-<div class="row">
+<div class="row" [hidden]="activityComplete">
   <div>
     <div class="content">
       <div class="row">
@@ -13,7 +13,7 @@
               {{language?.descriptions.boxIndicatorDo}}
             </div>
             <div class="panel-body">
-              <div *ngFor="let item of do" class="panel panel-default"><div class="panel-body"> {{item.description}} </div></div>
+              <div *ngFor="let item of do" class="panel panel-default" dnd-draggable [dragData]=item><div class="panel-body"> {{item.description}} </div></div>
             </div>
           </div>
         </div>
@@ -23,7 +23,7 @@
               {{language?.descriptions.boxIndicatorDont}}
             </div>
             <div class="panel-body">
-              <div *ngFor="let item of dont" class="panel panel-default"><div class="panel-body"> {{item.description}} </div></div>
+              <div *ngFor="let item of dont" class="panel panel-default" dnd-draggable [dragData]=item><div class="panel-body"> {{item.description}} </div></div>
             </div>
           </div>
         </div>
@@ -43,5 +43,24 @@
     </div>
   </div>
 </div>
+<div class="row" [hidden]="activityComplete">
+  <div id="submit-reset">
+    <button class="btn button-branding-green" [disabled]="!submitEnabled" (click)="onComplete()">{{language?.buttons.submit}}
+    </button>
+    &nbsp;
+    <button class="btn button-branding-blue" (click)="resetQuestions()">{{language?.buttons.reset}}</button>
+  </div>
+</div>
+
+<div class="row col-lg-6 col-lg-offset-3 text-center" [hidden]="!activityComplete">
+  <div class="swal2-icon swal2-info">i</div>
+  <div>
+    <h2 class="swal2-title text-center" id="swal2-title">{{language?.MessageP1}} {{getScore()}} {{language?.MessageP2}}</h2>
+  </div>
+  <div class="swal2-title text-center">
+    <button class="btn button-branding-blue btn-lg" (click)="resetQuestions()">{{language?.buttons.reset}}</button>
+  </div>
+</div>
+
 <button-nav nexturl="/malaria-101/activity-3/1" prevurl="/malaria-101/activity-1-2" [completed]="completed" [complete]="activityComplete"></button-nav>
 <app-level-navigate [levelInfo]="CURR_STAGE"></app-level-navigate>
