Add stars related instructions

--- a/src/app/unlocked-stage/how-to-play/howtoplay.component.html
+++ b/src/app/unlocked-stage/how-to-play/howtoplay.component.html
@@ -9,8 +9,11 @@
         <ol id="guide">
             <li>{{language?.instructions.ins1}}</li>
             <li>{{language?.instructions.ins2}}</li>
+            <li>{{language?.instructions.ins3}}</li>
+            <li>{{language?.instructions.ins4}}</li>
+            <li>{{language?.instructions.ins5}}</li>
         </ol>
-        <img src="../assets/img/unlocked-stage/how-to-play.gif"/>
+        <img src="../assets/img/unlocked-stage/how-to-play.gif" id="tutorialImage" />
         <a routerLink="/unlocked-stage/game/1" class="btn btn-primary btn-lg">{{language?.messages.nextButton}}</a>
     </div>
 </div>
