Move Unlocked stage to Prevention

--- a/src/app/prevention/strides-against/strides-against.component.html
+++ b/src/app/prevention/strides-against/strides-against.component.html
@@ -17,7 +17,7 @@
     <div #gameArea id="game-area"></div>
   </div>
 </div>
-<button-nav nexturl="/" prevurl="/prevent/stop-the-breed/game/1" [completed]="completed"
+<button-nav nexturl="/prevent/moskito-asesinato" prevurl="/prevent/stop-the-breed/game/1"  [completed]="completed"
             [complete]="activityComplete">
 </button-nav>
 <app-level-navigate [levelInfo]="CURR_STAGE"></app-level-navigate>
