--- a/src/app/unlocked-stage/how-to-play/howtoplay.component.html
+++ b/src/app/unlocked-stage/how-to-play/howtoplay.component.html
@@ -14,6 +14,6 @@
             <li>{{language?.instructions.ins5}}</li>
         </ol>
         <img src="../assets/img/unlocked-stage/how-to-play.gif" id="tutorialImage" />
-        <a routerLink="/unlocked-stage/game/1" class="btn btn-primary btn-lg">{{language?.messages.nextButton}}</a>
+        <a routerLink="game/1" class="btn btn-primary btn-lg">{{language?.messages.nextButton}}</a>
     </div>
 </div>
